fixed text-align in list__item h3

--- a/style.css
+++ b/style.css
@@ -207,6 +207,7 @@ main {
     font-size: 50px;
     font-weight: 700;
     text-transform: uppercase;
+    text-align: center;
 }
 
 
